# blender_theme

./: Cargo.toml  README.md  deny.toml
.github/workflows/: build_and_release.yaml  cargo_miri.yaml  cargo_semver_checks.yaml  ci.yaml  monthly.yaml  weekly.yaml
attribution/: dependencies.toml  self.toml
src/: lib.rs  main.rs
src/types/: mod.rs
tests/: integration_test.rs
themes/created/: blender_dark_v3.6.xml  blender_dark_v4.0.xml  blender_dark_v4.2.xml  v3.6_blender_dark.xml  v4.0_blender_dark.xml  v4.1_blender_dark.xml  v4.2_blender_dark.xml  v4.3_blender_dark.xml
themes/original/: blender-dark-v3.6.xml  blender-dark-v4.0.xml  blender-dark-v4.1.xml  v4.2_blender_dark.xml
