[package]
name = "blender_theme"
description = "Blender Theme Model"
version = "0.1.4"
edition = "2021"
license = "GPL-3.0-or-later"
repository = "https://github.com/ameknite/blender_theme"
rust-version = "1.81.0"

[dependencies]
color-eyre = "0.6.3"
const-hex = "1.14.0"
quick-xml = { version = "0.37.3", features = ["serialize"] }
serde = { version = "1.0.219", features = ["derive"] }
serde_path_to_error = "0.1.17"
thiserror = "2.0.12"
xmlem = "0.3.3"

# https://doc.rust-lang.org/cargo/reference/profiles.html
# https://github.com/johnthagen/min-sized-rust
[profile.release]
codegen-units = 1
lto = true
opt-level = "z"
panic = "abort"
strip = true

[lints.rust]
# https://doc.rust-lang.org/rustc/lints/listing/allowed-by-default.html#allowed-by-default-lints
unsafe_code = "warn"
unsafe_op_in_unsafe_fn = "warn"
missing-abi = "warn"
missing_docs = "allow"

[lints.clippy]
# https://rust-lang.github.io/rust-clippy/master/
# pedantic
pedantic = { level = "warn", priority = -1 }
must_use_candidate = "allow"
missing_errors_doc = "allow"
missing_panics_doc = "allow"

# restriction
undocumented_unsafe_blocks = "warn"
multiple_unsafe_ops_per_block = "warn"
allow_attributes = "warn"
